# palace

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  REPOMAP.md  ctl.py
crates/conductor/: Cargo.toml  README.md
crates/conductor/src/: error.rs  gamepad.rs  interview.rs  lib.rs  output.rs  question.rs  radial.rs  remote.rs  touchpad.rs
crates/director/: CLAUDE.md  Cargo.toml  README.md
crates/director/examples/: daemon.rs  widgets.rs  zulip_tool.rs
crates/director/src/: agent_tools.rs  benchmark.rs  control.rs  daemon.rs  daemon_ui.html  director_tool.rs  error.rs  executor.rs  goals.rs  issues.rs  lib.rs  model_ladder.rs  multi_model.rs  orchestrator.rs  planner.rs  pool.rs  profiler.rs  project.rs  recursive_survey.rs  session.rs  session_executor.rs  skill_finder.rs  state.rs  test_harness.rs  zulip_reactor.rs  zulip_reporter.rs  zulip_stream.rs  zulip_tool.rs
crates/director/tests/: zulip_integration.rs
crates/mountain/: Cargo.toml  README.md
crates/mountain/src/: cascade.rs  confidence.rs  controller.rs  delay.rs  error.rs  lib.rs  model.rs  state.rs  stream.rs
crates/mountain/src/benchmarks/: mod.rs
crates/palace/: Cargo.toml  README.md
crates/palace-ci/: Cargo.toml  README.md
crates/palace-ci/src/: config.rs  error.rs  levels.rs  lib.rs  pipeline.rs  rust.rs  scenarios.rs
crates/palace-gba/: Cargo.toml  README.md
crates/palace-gba/src/: audio.rs  emulator.rs  error.rs  lib.rs
crates/palace-plane/: CLAUDE.md  Cargo.toml  README.md
crates/palace-plane/src/: api.rs  comparison.rs  config.rs  exploration.rs  jecjit.rs  lib.rs  storage.rs  suggestions.rs  task.rs  velocity.rs
crates/palace-render/: Cargo.toml  README.md
crates/palace-render/examples/: demo.rs
crates/palace-render/src/: display.rs  lib.rs  renderer.rs  screen.rs  slider.rs  text.rs  ui.rs
crates/palace-render/src/shaders/: quad.wgsl
crates/palace-zulip/: Cargo.toml
crates/palace-zulip/examples/: bot_test.rs
crates/palace-zulip/src/: bot.rs  client.rs  error.rs  events.rs  lib.rs  messages.rs  reactions.rs  status_board.rs  streams.rs
crates/palace/src/: app.rs  config.rs  gamepad.rs  gba_controllable.rs  inference.rs  main.rs
deploy/: palace-director@.service
docker/zulip/: docker-compose.yml
docs/: README.md
docs/architecture/: ARCHITECTURE.md  DIRECTOR.md  LLM-CODE-SDK.md
docs/tools/: TOOLS.md
paper/: Makefile  README.md  palace.tex
