[package]
name = "conductor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Recursive interview system for human-AI collaboration with gamepad interface"

# Conductor: The interactive decision resolution system
# Allows all uncertainties to be resolved by directly asking the user
# through recursive interviews with branching questions and gamepad control.

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
futures.workspace = true
llm-code-sdk = { path = "../llm-code-sdk" }
md5 = "0.7"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }

# PS5/Gamepad support
gilrs = "0.11"

[dev-dependencies]
tokio-test.workspace = true
tracing-subscriber.workspace = true
