[package]
name = "mountain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Time-delayed cascading LLM control for realtime program automation"

# Mountain: Climb the mountain of latency with cascading model inference
# Enables realtime AI control by compensating for LLM response times through
# time-delayed execution and hierarchical model orchestration.

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
llm-code-sdk = { path = "../llm-code-sdk" }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

# For WASM isolation of delayed execution
wasmtime = { version = "28", optional = true }

[dev-dependencies]
tokio-test.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
wasm-isolation = ["wasmtime"]
