[package]
name = "palace-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "wgpu-based rendering for Palace dual-screen UI"

# Palace Render: GPU-accelerated UI for the Palace system
# - Dual-screen split view (Game | Orchestrator)
# - Confidence slider display
# - LLM output stream rendering
# - Real-time code highlighting

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bytemuck = { version = "1.14", features = ["derive"] }
conductor = { path = "../conductor" }
futures.workspace = true
glyphon = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
mountain = { path = "../mountain" }
pollster = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
wgpu = "28"
winit = "0.30"

[dev-dependencies]
tokio-test.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "demo"
path = "examples/demo.rs"
