[package]
name = "palace-zulip"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zulip Chat integration for Palace agent communication"

# Palace-Zulip: Real-time communication between agents and operators.
# Provides channels for project coordination, issue discussion, and
# agent-to-agent messaging via a local Zulip instance.

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tracing-subscriber.workspace = true
